# tfm_unir

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
models/: hyperparam_tuning.py  metamodel_stack.py  models_final_comparation.py  models_randomized.py  try_model_submission.py  xgb_feature_importance.py
models/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
models/catboost_info/learn/: events.out.tfevents
notebooks/: eda_logs.ipynb  eda_members.ipynb  eda_train.ipynb  eda_transactions.ipynb
notebooks/.ipynb_checkpoints/: eda_members-checkpoint.ipynb
scripts/: config.py  configuration.yaml  create_dataset.py  transform_functions.py
